--- a/good_soil.html
+++ b/good_soil.html
@@ -1,99 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Good Soil</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Recursive&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <main>
-      <div id="major_container">
-        <h1>Good Soil</h1>
-        <form>
-          <!-- this is the element group -->
-          <div class="soil-section" id="1_A">
-            <button class="h2o-level">High</button>
-            <button class="h2o-level">Med</button>
-            <button class="h2o-level">Low</button>
-          </div>
-          <div class="soil-section" id="2_A">
-            <button class="h2o-level">High</button>
-            <button class="h2o-level">Med</button>
-            <button class="h2o-level">Low</button>
-          </div>
-          <div class="soil-section" id="3_A">
-            <button class="h2o-level">High</button>
-            <button class="h2o-level">Med</button>
-            <button class="h2o-level">Low</button>
-          </div>
-          <div class="soil-section" id="4_A">
-            <button class="h2o-level">High</button>
-            <button class="h2o-level">Med</button>
-            <button class="h2o-level">Low</button>
-          </div>
-          <div class="soil-section" id="5_A">
-            <button class="h2o-level">High</button>
-            <button class="h2o-level">Med</button>
-            <button class="h2o-level">Low</button>
-          </div>
-          <div class="soil-section" id="6_A">
-            <button class="h2o-level">High</button>
-            <button class="h2o-level">Med</button>
-            <button class="h2o-level">Low</button>
-          </div>
-          <div class="soil-section" id="1_B">
-            <button class="h2o-level">High</button>
-            <button class="h2o-level">Med</button>
-            <button class="h2o-level">Low</button>
-          </div>
-          <div class="soil-section" id="2_B">
-            <button class="h2o-level">High</button>
-            <button class="h2o-level">Med</button>
-            <button class="h2o-level">Low</button>
-          </div>
-          <div class="soil-section" id="3_B">
-            <button class="h2o-level">High</button>
-            <button class="h2o-level">Med</button>
-            <button class="h2o-level">Low</button>
-          </div>
-          <div class="soil-section" id="4_B">
-            <button class="h2o-level">High</button>
-            <button class="h2o-level">Med</button>
-            <button class="h2o-level">Low</button>
-          </div>
-          <div class="soil-section" id="5_B">
-            <button class="h2o-level">High</button>
-            <button class="h2o-level">Med</button>
-            <button class="h2o-level">Low</button>
-          </div>
-          <div class="soil-section" id="6_B">
-            <button class="h2o-level">High</button>
-            <button class="h2o-level">Med</button>
-            <button class="h2o-level">Low</button>
-          </div>
-          <!-- end of group -->
-          <div id="details">
-            <label for="name">Name</label>
-            <input type="text" id="name" />
-            <label for="date">Date</label>
 
-            <input type="date" id="date" />
-          </div>
-          <button id="go">Go</button>
-        </form>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Good Soil</title>
+  <link rel="stylesheet" href="./style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Recursive&display=swap" rel="stylesheet" />
+</head>
 
-      <div id="history">
-        <ul></ul>
-      </div>
-    </main>
+<body>
+  <main>
+    <div id="major_container">
+      <h1>Good Soil</h1>
+      <form>
+        <!-- this is the element group -->
+        <div class="soil-section" id="1_A">
+          <button class="h2o-level">High</button>
+          <button class="h2o-level">Med</button>
+          <button class="h2o-level">Low</button>
+        </div>
+        <div class="soil-section" id="2_A">
+          <button class="h2o-level">High</button>
+          <button class="h2o-level">Med</button>
+          <button class="h2o-level">Low</button>
+        </div>
+        <div class="soil-section" id="3_A">
+          <button class="h2o-level">High</button>
+          <button class="h2o-level">Med</button>
+          <button class="h2o-level">Low</button>
+        </div>
+        <div class="soil-section" id="4_A">
+          <button class="h2o-level">High</button>
+          <button class="h2o-level">Med</button>
+          <button class="h2o-level">Low</button>
+        </div>
+        <div class="soil-section" id="5_A">
+          <button class="h2o-level">High</button>
+          <button class="h2o-level">Med</button>
+          <button class="h2o-level">Low</button>
+        </div>
+        <div class="soil-section" id="6_A">
+          <button class="h2o-level">High</button>
+          <button class="h2o-level">Med</button>
+          <button class="h2o-level">Low</button>
+        </div>
+        <div class="soil-section" id="1_B">
+          <button class="h2o-level">High</button>
+          <button class="h2o-level">Med</button>
+          <button class="h2o-level">Low</button>
+        </div>
+        <div class="soil-section" id="2_B">
+          <button class="h2o-level">High</button>
+          <button class="h2o-level">Med</button>
+          <button class="h2o-level">Low</button>
+        </div>
+        <div class="soil-section" id="3_B">
+          <button class="h2o-level">High</button>
+          <button class="h2o-level">Med</button>
+          <button class="h2o-level">Low</button>
+        </div>
+        <div class="soil-section" id="4_B">
+          <button class="h2o-level">High</button>
+          <button class="h2o-level">Med</button>
+          <button class="h2o-level">Low</button>
+        </div>
+        <div class="soil-section" id="5_B">
+          <button class="h2o-level">High</button>
+          <button class="h2o-level">Med</button>
+          <button class="h2o-level">Low</button>
+        </div>
+        <div class="soil-section" id="6_B">
+          <button class="h2o-level">High</button>
+          <button class="h2o-level">Med</button>
+          <button class="h2o-level">Low</button>
+        </div>
+        <!-- end of group -->
+        <div id="details">
+          <label for="name">Name</label>
+          <input type="text" id="name" />
+          <label for="date">Date</label>
 
-    <script src="/bio.js" type="module"></script>
-  </body>
+          <input type="date" id="date" />
+        </div>
+        <button id="go">Go</button>
+      </form>
+    </div>
+
+    <div id="history">
+      <ul></ul>
+    </div>
+  </main>
+
+  <script src="/bio.js" type="module"></script>
+</body>
+
 </html>
