--- a/good_soil.html
+++ b/good_soil.html
@@ -78,8 +78,8 @@
         </div>
         <!-- end of group -->
         <div id="details">
-          <label for="name">Name</label>
-          <input type="text" id="name" />
+          <label for="note">Note</label>
+          <input type="text" id="note" />
           <label for="date">Date</label>
 
           <input type="date" id="date" />
