--- a/good_soil.html
+++ b/good_soil.html
@@ -16,62 +16,62 @@
       <h1>Good Soil</h1>
       <form>
         <!-- this is the element group -->
-        <div class="soil-section" id="1_A">
+        <div class="soil-section" id="A1">
           <button class="h2o-level">High</button>
           <button class="h2o-level">Med</button>
           <button class="h2o-level">Low</button>
         </div>
-        <div class="soil-section" id="2_A">
+        <div class="soil-section" id="A2">
           <button class="h2o-level">High</button>
           <button class="h2o-level">Med</button>
           <button class="h2o-level">Low</button>
         </div>
-        <div class="soil-section" id="3_A">
+        <div class="soil-section" id="A3">
           <button class="h2o-level">High</button>
           <button class="h2o-level">Med</button>
           <button class="h2o-level">Low</button>
         </div>
-        <div class="soil-section" id="4_A">
+        <div class="soil-section" id="A4">
           <button class="h2o-level">High</button>
           <button class="h2o-level">Med</button>
           <button class="h2o-level">Low</button>
         </div>
-        <div class="soil-section" id="5_A">
+        <div class="soil-section" id="A5">
           <button class="h2o-level">High</button>
           <button class="h2o-level">Med</button>
           <button class="h2o-level">Low</button>
         </div>
-        <div class="soil-section" id="6_A">
+        <div class="soil-section" id="A6">
           <button class="h2o-level">High</button>
           <button class="h2o-level">Med</button>
           <button class="h2o-level">Low</button>
         </div>
-        <div class="soil-section" id="1_B">
+        <div class="soil-section" id="B1">
           <button class="h2o-level">High</button>
           <button class="h2o-level">Med</button>
           <button class="h2o-level">Low</button>
         </div>
-        <div class="soil-section" id="2_B">
+        <div class="soil-section" id="B2">
           <button class="h2o-level">High</button>
           <button class="h2o-level">Med</button>
           <button class="h2o-level">Low</button>
         </div>
-        <div class="soil-section" id="3_B">
+        <div class="soil-section" id="B3">
           <button class="h2o-level">High</button>
           <button class="h2o-level">Med</button>
           <button class="h2o-level">Low</button>
         </div>
-        <div class="soil-section" id="4_B">
+        <div class="soil-section" id="B4">
           <button class="h2o-level">High</button>
           <button class="h2o-level">Med</button>
           <button class="h2o-level">Low</button>
         </div>
-        <div class="soil-section" id="5_B">
+        <div class="soil-section" id="B5">
           <button class="h2o-level">High</button>
           <button class="h2o-level">Med</button>
           <button class="h2o-level">Low</button>
         </div>
-        <div class="soil-section" id="6_B">
+        <div class="soil-section" id="B6">
           <button class="h2o-level">High</button>
           <button class="h2o-level">Med</button>
           <button class="h2o-level">Low</button>
@@ -88,8 +88,10 @@
       </form>
     </div>
 
-    <div id="history">
-      <ul></ul>
+    <div id="history-container">
+      <div id="history-grid">
+
+      </div>
     </div>
   </main>
 
