--- a/good_soil.html
+++ b/good_soil.html
@@ -87,10 +87,21 @@
         <button id="go">Go</button>
       </form>
     </div>
-
+    <div class="spacer"></div>
     <div id="history-container">
       <div id="history-grid">
-
+        <button class="btn-results">A1</button>
+        <button class="btn-results">A2</button>
+        <button class="btn-results">A3</button>
+        <button class="btn-results">A4</button>
+        <button class="btn-results">A5</button>
+        <button class="btn-results">A6</button>
+        <button class="btn-results">B1</button>
+        <button class="btn-results">B2</button>
+        <button class="btn-results">B3</button>
+        <button class="btn-results">B4</button>
+        <button class="btn-results">B5</button>
+        <button class="btn-results">B6</button>
       </div>
     </div>
   </main>
