--- a/good_soil.html
+++ b/good_soil.html
@@ -104,9 +104,13 @@
         <button class="btn-results">B6</button>
       </div>
     </div>
+    <div id="chart">
+      <canvas></canvas>
+    </div>
   </main>
 
   <script src="/bio.js" type="module"></script>
+  <!-- <script src="/charts/barHxChart.js" type="module"></script> -->
 </body>
 
 </html>
