--- a/good_soil.html
+++ b/good_soil.html
@@ -8,6 +8,8 @@
   <title>Good Soil</title>
   <link rel="stylesheet" href="./style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Recursive&display=swap" rel="stylesheet" />
+  <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
 </head>
 
 <body>
@@ -109,7 +111,7 @@
     </div>
   </main>
 
-  <script src="/bio.js" type="module"></script>
+  <script src="bio.js" type="module"></script>
   <!-- <script src="/charts/barHxChart.js" type="module"></script> -->
 </body>
 
